feat: 엔티티 컬럼속성 및 연관관계 설정, 변경된 부분 반영하여 dto,Mapper 수정
closes #17