@@ -1,61 +1,42 @@
 package site.campingon.campingon.camp.mapper;
 
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
+import org.mapstruct.*;
 import site.campingon.campingon.camp.dto.*;
 import site.campingon.campingon.camp.entity.*;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+// 엔티티와 DTO 간 매핑 시 매핑되지 않은 필드가 있어도 MapStruct가 경고나 오류를 생성 x
+@Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
+public interface CampMapper {
 
-@Mapper(componentModel = "spring")
-public class CampMapper {
+  // Camp -> CampListResponseDto로 매핑
+  @Mapping(target = "name", source = "campName")
+  @Mapping(target = "keywords", source = "keywords", qualifiedByName = "keywordsToStringList")
+  @Mapping(target = "address", source = "address", qualifiedByName = "addressToString")
+  CampListResponseDto toCampListDto(Camp camp);
 
-  @Mapping(source = "camp.campName", target = "name")
-  @Mapping(source = "campAddr", target = "address")
-  @Mapping(source = "campKeywords", target = "keywords")
-  CampListResponseDto toCampListDto(
-      Camp camp,
-      CampAddr campAddr,
-      List<CampKeyword> campKeywords,
-      boolean isLike
-  );
-
-  @Mapping(source = "camp.campName", target = "name")
-  @Mapping(source = "campAddr", target = "address")
-  @Mapping(source = "campImages", target = "images")
-  @Mapping(source = "campKeywords", target = "keywords")
-  @Mapping(source = "campInfo.recommendCnt", target = "recommendCnt")
-  @Mapping(source = "campInfo.likeCnt", target = "likeCnt")
-  CampDetailResponseDto toCampDetailDto(
-      Camp camp,
-      CampAddr campAddr,
-      List<CampImage> campImages,
-      List<CampKeyword> campKeywords,
-      CampInfo campInfo
-  );
+  @Mapping(target = "name", source = "campName")
+  @Mapping(target = "address", source = "address", qualifiedByName = "addressToString")
+  @Mapping(target = "recommendCnt", source = "campInfo.recommendCnt")
+  @Mapping(target = "likeCnt", source = "campInfo.likeCnt")
+  CampDetailResponseDto toCampDetailDto(Camp camp);
 
   CampSiteListResponseDto toCampSiteListDto(CampSite campSite);
 
-  CampAddrDto toCampAddrDto(CampAddr address);
-
-
-  // 캠핑장 키워드 리스트를 String 리스트로 변환
-  default List<String> mapKeywords(List<CampKeyword> keywords) {
-    if (keywords == null) return new ArrayList<>();
-    return keywords.stream()
-        .map(CampKeyword::getKeyword)
-        .collect(Collectors.toList());
+  @Named("addressToString")
+  default String addressToString(CampAddr address) {
+    return address != null ? address.getFullAddress() : null;
   }
 
-  // 이미지url 리스트를 String 리스트로 변환
-  default List<String> mapImages(List<CampImage> images) {
-    if (images == null) return new ArrayList<>();
-    return images.stream()
-        .map(CampImage::getImageUrl)
-        .collect(Collectors.toList());
+  @Named("keywordsToStringList")
+  default List<String> keywordsToStringList(List<CampKeyword> keywords) {
+    return keywords.stream()
+        .map(CampKeyword::getKeyword)
+        .toList();
   }
 
 }
